# nostr-rs

./: Cargo.toml  readme.md
src/: client.rs  client.toml  lib.rs  relay.rs  relay.toml
